2006-01-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
       * src/ObjectSelector/_FamilyFrame.py, src/ObjectSelector/_FamilyPreviewFrame.py,
         src/ObjectSelector/_ObjectFrameBase.py, src/ObjectSelector/_ObjectSelectorWindow.py,
	 src/ObjectSelector/_PersonFrame.py, src/ObjectSelector/_PersonPreviewFrame.py,
         src/ObjectSelector/_PersonTreeFrame.py src/ObjectSelector/_ObjectSelectorResult.py:
	object selection and initial preview works for Family and Person

2006-01-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
       * src/ObjectSelector/_FamilyFrame.py: basic object selection now working
       * src/ObjectSelector/_FamilyTreeFrame.py: basic object selection now working
       * src/ObjectSelector/_ObjectFrameBase.py: basic object selection now working
       * src/ObjectSelector/_ObjectSelectorWindow.py: basic object selection now working
       * src/ObjectSelector/_PersonFrame.py: basic object selection now working
       * src/ObjectSelector/_PersonTreeFrame.py: basic object selection now working


2006-01-16  Don Allingham  <don@gramps-project.org>
	* src/AddMedia.py: glade path
	* src/AddrEdit.py: glade path
	* src/AttrEdit.py: glade path
	* src/DateEdit.py: glade path
	* src/EventEdit.py: glade path
	* src/GrampsCfg.py: glade path
	* src/ImageSelect.py: glade path
	* src/Sources.py: glade path
	* src/StyleEditor.py: glade path
	* src/const.py.in: glade path
	* src/Marriage.py: glade path
	* src/unlocked.png: added
	* src/gramps.glade: remove lock border
	* src/GrampsDb/_ReadGedcom.py: optimize UI updates, add test code

2006-01-16  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager: Remov unused code.
	* src/GrampsDb/_GrampsBSDDB.py: Do small txn during batch
	transaction; set db.DB_TXN_NOSYNC flag on an environment;
	Remove lock limits; set db.DB_LOG_AUTOREMOVE flag; add checkpoints
	on: open, batch transaction start and end; close.
	* src/GrampsDb/_GrampsDbBase.py (change_database, no_database):