@@ -80,6 +80,9 @@ class PersonTreeFrame(gtk.Frame):
     def get_selection(self):
         return self._selection
     
+    def get_tree(self):
+        return self._tree
+
 if gtk.pygtk_version < (2,8,0):
     gobject.type_register(PersonTreeFrame)
 
