@@ -1,4 +1,10 @@
 2006-01-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
+      * src/ObjectSelector/_FamilyFrame.py src/ObjectSelector/_FamilyPreviewFrame.py
+        src/ObjectSelector/_FamilyTreeFrame.py src/ObjectSelector/_ObjectSelectorWindow.py
+	src/ObjectSelector/_PersonFrame.py src/ObjectSelector/_PersonPreviewFrame.py
+	src/ObjectSelector/_PersonTreeFrame.py: UI improvements to object selector
+
+2006-01-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/ObjectSelector/_FamilyFrame.py, src/ObjectSelector/_FamilyPreviewFrame.py,
          src/ObjectSelector/_ObjectFrameBase.py, src/ObjectSelector/_ObjectSelectorWindow.py,
 	 src/ObjectSelector/_PersonFrame.py, src/ObjectSelector/_PersonPreviewFrame.py,
